Use tray icon with play server for local use.

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -21,6 +21,8 @@ application.langs="en"
 # Default to Global in the root package.
 # application.global=Global
 
+play.modules.enabled += "org.labrad.tray.TrayModule"
+
 # Router
 # ~~~~~
 # Define the Router object to use for this application.
